--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,14 @@
       </p>
     </main>
       <br><br>
-      <footer>
-        <a href="mailto:csim@iastate.edu">csim@iastate.edu</a><br>
+      <div class="footer">
+      <p>
+        simmonschristianr@gmail.com<br>
         138 Gray Ave<br>
         Ames, IA 50014<br>
         563-528-3835
-      </footer>
+      </p>
+    </div>
     </main>
   </body>
 </html>
