added French language

--- a/fr/bio.html
+++ b/fr/bio.html
@@ -12,39 +12,31 @@
   </script>
     <title>Christian Simmons's Website</title>
     <meta charset="utf-8">
-    <link href= css/main.css rel="stylesheet">
+    <link href= ../css/main.css rel="stylesheet">
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
     </script>
     <![endif]-->
-    <link rel="images/apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="images/icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="images/icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="images/manifest" href="/site.webmanifest">
-    <link rel="images/mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="../images/apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="../images/icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="../images/icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="../images/manifest" href="/site.webmanifest">
+    <link rel="../images/mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body class="front">
-    <a href="http://www.simmonschristianr.com" id="logo"><img src="images/logo.png" alt="Christian Simmons"></a>
+    <a href="http://www.simmonschristianr.com" id="logo"><img src="../images/logoFR.png" alt="Christian Simmons"></a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a></li>
+        <li><a href="../ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a></li>
         <li><a href="bio.html">Bio</a></li>
-        <li><a href="en/index.html">EN</a> | <a href="fr/index.html">FR</a></li>
+        <li><a href="../en/bio.html">EN</a> | <a href="bio.html">FR</a></li>
       </ul>
     </nav>
     <main>
       <p>
-        This is my website, I built it myself and it contains everything on my resume plus a little more. &nbsp;
-        <img src="images/file.jpg" alt="Christian Simmons" id="headshot">
-        <br>
-        It was built using:
-        <ul>
-          <li>HTML and CSS</li>
-          <li>Github for hosting and updating</li>
-        </ul>
       </p>
     </main>
       <br><br>
