--- a/bio.html
+++ b/bio.html
@@ -16,22 +16,23 @@
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
     </script>
     <![endif]-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="images/apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="images/icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="images/icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="images/manifest" href="/site.webmanifest">
+    <link rel="images/mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body class="front">
-    <a href="http://www.simmonschristianr.com" id="logo"><img src="logo.png" alt="Christian Simmons"></a>
+    <a href="http://www.simmonschristianr.com" id="logo"><img src="images/logo.png" alt="Christian Simmons"></a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a>
+        <li><a href="ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a></li>
         <li><a href="bio.html">Bio</a></li>
+        <li><a href="en/bio.html">EN</a> | <a href="fr/bio.html">FR</a></li>
       </ul>
     </nav>
     <main>
