added some mobile formatting

--- a/en/bio.html
+++ b/en/bio.html
@@ -23,6 +23,7 @@
     <link rel="../images/mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body class="front">
     <a href="http://www.simmonschristianr.com" id="logo"><img src="../images/logo.png" alt="Christian Simmons"></a>
